# ToonDo

./: .gitignore  CLAUDE.md  PROJECT_TASKS.md  README.md  test.txt.txt
.github/: copilot-instructions.md
app/: README.md  pubspec.yaml
app/lib/: main.dart  routes.dart
app/linux/: CMakeLists.txt  my_application.cc
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
easy/app_icon_menu/: pubspec.yaml
easy/buttons/: pubspec.yaml
easy/listpage/: README.md  pubspec.yaml
easy/push_named/: pubspec.yaml
easy/snackbar/: pubspec.yaml
easy/widget_practice/: pubspec.yaml
harder/first_harder/: README.md  pubspec.yaml
harder/hot/: README.md  pubspec.yaml
harder/json_app/: pubspec.yaml
harder/scrolling_effect/: README.md  pubspec.yaml
harder/todo/: pubspec.yaml
todo_with_alarm/: .cursorrules  .gitignore  README.md  pubspec.yaml
todo_with_alarm/android/: build.gradle  settings.gradle
todo_with_alarm/integration_test/: auth_flow_test.dart  test_bundle.dart
todo_with_alarm/lib/: injection.dart  main.dart
todo_with_alarm/linux/: CMakeLists.txt  my_application.cc
todo_with_alarm/web/: index.html  manifest.json
todo_with_alarm/windows/: CMakeLists.txt
toondo/: .gitignore  API_SYNC_STATUS.md  AUTH_STATUS_REPORT_2025-11-09.md  README.md  dartdoc_options.yaml  dir.txt  pubspec.yaml
toondo/android/: build.gradle.kts
toondo/lib/: injection.dart  (+1 more)
toondo_fastapi/: .env  crud.py  database.py  main.py  models.py  schemas.py  utils.py
toondo_ml/: pyproject.toml
toondo_ml/data/raw/: 자기성장기록장_20250310.xls
(+417 files in other folders)
